@@ -1,0 +1,7 @@
+.. code-block::
+   :linenos:
+
+   def hello(name)
+       print("hello", name)
+
+   hello("Sphinx")
